--- a/package.json
+++ b/package.json
@@ -7,29 +7,33 @@
     "@midwayjs/web": "^2.13.4",
     "egg": "^2.32.0",
     "egg-scripts": "^2.15.2",
-    "ssr-core-vue3": "^5.7.6",
-    "ssr-types": "^5.6.39",
-    "vant": "^3.3.2",
+    "ssr-core-vue3": "^6.1.24",
+    "serialize-javascript": "^6.0.0",
+    "ssr-server-utils": "^6.1.24",
+    "ssr-types": "^6.1.24",
+    "vant": "^3.3.7",
     "swiper": "6.7.5",
-    "vue": "^3.2.22",
+    "vue": "^3.2.26",
     "vue-router": "^4.0.0",
-    "vuex": "^4.0.0"
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@midwayjs/egg-ts-helper": "^1.0.5",
     "cross-env": "^7.0.3",
-    "eslint-config-standard-vue-ts": "^1.0.5",
-    "ssr": "^5.7.6",
-    "ssr-plugin-midway": "^5.7.10",
-    "ssr-plugin-vue3": "^5.7.11",
-    "typescript": "^3.9.7"
+    "eslint-config-standard-vue-ts": "^1.0.17",
+    "ssr": "^6.1.24",
+    "ssr-plugin-midway": "^6.1.24",
+    "ssr-plugin-vue3": "^6.1.24",
+    "typescript": "^4.5.2"
   },
   "scripts": {
     "prod": "ssr build && egg-scripts start --daemon --port=3000 --title=midway-server-my_midway_project --framework=@midwayjs/web",
+    "prod:vite": "ssr build --vite && cross-env BUILD_TOOL=vite egg-scripts start --port=3000 --title=midway-server-my_midway_project --framework=@midwayjs/web",
     "stop": "egg-scripts stop --title=midway-server-my_midway_project",
     "start": "ssr start",
     "start:vite": "ssr start --vite",
     "build": "ssr build",
+    "build:vite": "ssr build --vite",
     "deploy": "ssr build && ssr deploy",
     "deploy:tencent": "ssr build && ssr deploy --tencent",
     "lint": "eslint . --ext .js,.tsx,.ts,.vue --cache",
